--- a/styles/Feed.module.css
+++ b/styles/Feed.module.css
@@ -1,7 +1,6 @@
 .main{
     display: flex;
-    margin-top: 50px;
-    
+    margin-top: 100px;
     align-items: center;
     flex-direction: column;
 }
@@ -9,11 +8,13 @@
 .post{
     width: 500px;
     margin-bottom: 25px;
-    padding: 0px 20px 25px;
+    padding-left: 25px;
+    padding-right: 25px;
     border-bottom: 1px solid black;
 }
 .post img{
     width: 100%;
+    margin-bottom: 25px;
 }
 .post h1{
     margin: 0px 10px 0 10px;
