--- a/styles/Toolbar.module.css
+++ b/styles/Toolbar.module.css
@@ -1,8 +1,11 @@
 .main{
     width: 100%;
-    height: 50px;
     display: flex;
     justify-content: center;
+    position: fixed;
+    backdrop-filter: blur(15px) saturate(120%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(198, 213, 240, 0.75);
 }
 
 .main div{
