--- a/styles/Feed.module.css
+++ b/styles/Feed.module.css
@@ -1,3 +1,8 @@
+
+.container {
+    padding: 2px 16px;
+  }
+  
 .main{
     display: flex;
     margin-top: 100px;
@@ -39,3 +44,12 @@
     cursor: not-allowed;
     color: gray;
 }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; 
+    margin-bottom: 25px;
+  }
+ .card img {
+    border-radius: 5px 5px 0 0;
+  }
